--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "credit",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://Thondarock.github.io/CreditTracker",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "firebase": "^12.7.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
